fixed tooltip flicker issue

--- a/src/app/shared/tooltip/tooltip.component.scss
+++ b/src/app/shared/tooltip/tooltip.component.scss
@@ -9,8 +9,10 @@
   padding: 0.188rem 0.375rem;
   font-size: 0.813rem;
   margin-top: 0.313rem;
+  pointer-events: none;
   transform: translateX(-50%);
   z-index: 1;
+
   &::after {
     content: "";
     width: 0;
